--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is an initiative of BlackHatNotes LLC, specially formed with the collaboration of Ethical Hackers around the world. We offer assistance to Cybersecurity Firms, Students, Communities and etc.
+This is an initiative of BlackHatters LLC (formerly BlackHatNotes LLC), specially formed with the collaboration of Ethical Hackers around the world. We offer assistance to Cybersecurity Firms, Students, Communities and etc.
